documentacion/obtenida/ARINC 429/driver and software/LX708-1/API/L71W32.H

typedef void VOID;
typedef unsigned short USHORT;
typedef unsigned long ULONG;
typedef int HCARD;
typedef int ERRVAL;

L71W32API USHORT __stdcall L71_XmtNumberRd(HCARD handleval);

L71W32API VOID __stdcall L71_XmtNumberWr(USHORT brdnum,HCARD handleval);

L71W32API ERRVAL __stdcall L71_XmtPeriod(ULONG frameperiod,HCARD handleval);

L71W32API ERRVAL __stdcall L71_XmtPeriodEx(ULONG frameperiod,USHORT intfreq,USHORT framecount,HCARD handleval);

L71W32API ERRVAL __stdcall L71_XmtPeriodExx(ULONG frameperiod,USHORT intfreq,USHORT framecount,ULONG bcconfigval,USHORT bctotal,ULONG intconfigval,USHORT inttotal,ULONG msgconfigval,HCARD handleval);

L71W32API USHORT __stdcall L71_XmtSizeRd(HCARD handleval);

L71W32API VOID __stdcall L71_XmtSizeWr(USHORT mode,HCARD handleval);

/**
*
*  Transmitter configuration options
*
**/

#define XMTCFG_DEFAULT      0x00000000L	    //Select all default settings
#define XMTCFG_BUSA         0x00000000L     //Message will be transmitted on bus A (default)
#define XMTCFG_BUSB         0x00000004L     //Message will be transmitted on bus B 
#define XMTCFG_NOSWAP       0x00000000L     //Disable bit swapping (default)
#define XMTCFG_SWAP         0x00004000L     //Enable bit swapping
#define XMTCFG_MODEL        0x00000000L     //Xmt messages are created depending upon model (default)
#define XMTCFG_RAM          0x00100000L     //Xmt messages are created in static RAM
#define XMTCFG_DPRAM        0x00200000L     //Xmt messages are created in dual-port RAM

/**
*
*  Receiver configuration options
*
**/

#define RCVCFG_DEFAULT      0x00000000L     //Select all default settings
#define RCVCFG_BUSA 	    0x00000000L     //Respond to channel A (default)
#define RCVCFG_BUSB	        0x00010000L     //Respond to channel B
#define RCVCFG_NOSWAP       0x00000000L     //Disable bit swapping (default)
#define RCVCFG_SWAP         0x00008000L     //Enable bit swapping
#define RCVCFG_WORDSYNC     0x00000000L     //Sync on words (default)
#define RCVCFG_BITSYNC      0x00080000L	    //Sync on each bit
#define RCVCFG_MODEL        0x00000000L     //Xmt messages are created depending upon model (default)
#define RCVCFG_RAM          0x00100000L     //Xmt messages are created in static RAM
#define RCVCFG_DPRAM        0x00200000L     //Xmt messages are created in dual-port RAM


/**
*
*  Bus controller configuration options
*
**/

#define BCCFG_DEFAULT      0x00000000L      //Select all default settings
#define BCCFG_ENABLE       0x00000000L      //Enable bus controller (default)
#define BCCFG_DISABLE      0x00000001L      //Disable bus controller
#define BCCFG_TRIGNONE     0x00000000L      //No trigger (default)
#define BCCFG_TRIGEXT      0x00000010L      //Trigger external
#define BCCFG_TRIGSTART    0x00000020L      //Trigger external start
#define BCCFG_NOINTHALT    0x00000000L      //Do not generate interrupt on halt (default)
#define BCCFG_INTHALT      0x00000100L      //Generate interrupt on halt
#define BCCFG_NOINTPAUSE   0x00000000L      //Do not generate interrupt on pause (default)
#define BCCFG_INTPAUSE     0x00000200L      //Generate interrupt on pause
#define BCCFG_NOLOOPMAX    0x00000000L      //Disable maximum loop count (default)
#define BCCFG_LOOPMAX      0x00001000L      //Enable maximum loop count
#define BCCFG_NOSTEP       0x00000000L      //Disable single stepping (default)
#define BCCFG_STEP         0x00002000L      //Enable single stepping
#define BCCFG_NOSWAP       0x00000000L      //Disable bit swapping (default)
#define BCCFG_SWAP         0x00004000L      //Enable bit swapping
#define BCCFG_MC01         0x00000000L      //Select SA=00000 or SA=11111 for mode codes (default)
#define BCCFG_MC1          0x01000000L      //Select SA=11111 for mode codes
#define BCCFG_MC0          0x02000000L      //Select SA=00000 for mode codes
#define BCCFG_MCNONE       0x03000000L      //Disable mode codes
#define BCCFG_SYNCALL      0x00000000L      //*Sync on all messages (default)
#define BCCFG_SYNCSEL      0x40000000L      //*Selective sync
#define BCCFG_MODEL        0x00000000L      //BC messages are created in dual-port RAM (default)
#define BCCFG_RAM          0x00100000L      //BC messages are created in static RAM
#define BCCFG_DPRAM        0x00200000L      //BC messages are created in dual-port RAM

/**
*
*  Monitor configuration options
*
**/

#define MONCFG_DEFAULT      0x00000000L     //Select all default settings
#define MONCFG_FILLHALT     0x00000000L     //Enable monitor in fill and halt mode (default)
#define MONCFG_DISABLE      0x00000001L     //Disable monitor
#define MONCFG_CONTINUOUS   0x00000002L     //Enable monitor in continuous mode
#define MONCFG_DMA          0x00000004L     //Enable monitor in dma mode
#define MONCFG_FREE         0x00000008L     //Enable monitor in free mode
#define MONCFG_FAST         0x00000010L     //Enable monitor in fast mode
#define MONCFG_DELTA        0x00000020L     //Enable monitor in delta mode
#define MONCFG_NOINTFULL    0x00000000L     //Do not generate interrupt when monitor full (default)
#define MONCFG_INTFULL      0x00001000L     //Generate interrupt when monitor full
#define MONCFG_COMPLETE     0x00000000L     //Enable receiving complete words (default)
#define MONCFG_INCOMPLETE   0x00002000L     //Enable receiving incomplete words
#define MONCFG_MC01         0x00000000L     //Select SA=00000 or SA=11111 for mode codes (default)
#define MONCFG_MC1          0x00100000L     //Select SA=11111 for mode codes
#define MONCFG_MC0          0x00200000L     //Select SA=00000 for mode codes
#define MONCFG_MCNONE       0x00300000L     //Disable mode codes
#define MONCFG_16K          0x00000000L     //Allocate a 16K monitor buffer (default)
#define MONCFG_ALLAVAIL     0x01000000L     //Allocate all available memory to monitor buffer
#define MONCFG_32K          0x02000000L     //Allocate a 32K monitor buffer
#define MONCFG_64K          0x04000000L     //Allocate a 64K monitor buffer
#define MONCFG_128K         0x08000000L     //Allocate a 128K monitor buffer
#define MONCFG_DPRAM        0x10000000L     //Allocate all available dual-port memory

/**
*
*  Remote terminal configuration options
*
**/

#define RTCFG_DEFAULT      0x00000000L      //Select all default settings
#define RTCFG_SIMULATE     0x00000000L      //Enable RT simulation (default)
#define RTCFG_DISABLE      0x00000001L      //Disable RT
#define RTCFG_MONITOR      0x00000002L      //Enable RT monitor
#define RTCFG_NOBCAST      0x00000000L      //Disable broadcast (default)
#define RTCFG_BCAST        0x00000100L      //Enable broadcast
#define RTCFG_NOAUTOBUSY   0x00000000L      //Disable auto busy (default)
#define RTCFG_AUTOBUSY     0x00000200L      //Enable auto busy
#define RTCFG_BUILD        0x00000000L      //Enable auto building (default)
#define RTCFG_NOBUILD      0x00000400L      //Disable auto building
#define RTCFG_STDB         0x00000000L      //Use MIL-STD-1553B standard (default)
#define RTCFG_STDA         0x00000800L      //Use MIL-STD-1553A standard
#define RTCFG_NODYNBC      0x00000000L      //Do not respond to dynamic BC mode code (default)
#define RTCFG_DYNBC        0x00001000L      //Respond to dynamic BC mode code
#define RTCFG_NOIMMCLR     0x00000000L      //Do not clear status word bits (default)
#define RTCFG_IMMCLR       0x00002000L      //Status word bits are cleared immediately
#define RTCFG_NOBCASTADDR  0x00000000L      //Disable broadcast handling for address (default)
#define RTCFG_BCASTADDR    0x00004000L      //Enable broadcast handling for address
#define RTCFG_NOSWAP       0x00000000L      //Disable bit swapping (default)
#define RTCFG_SWAP         0x00008000L      //Enable bit swapping
#define RTCFG_WORDSYNC     0x00000000L		//Sync on words (default)
#define RTCFG_BITSYNC      0x00080000L		//Sync on each bit
#define RTCFG_CHANAB       0x00000000L      //Respond to both channels (default)
#define RTCFG_CHANA        0x00020000L      //Respond to channel A
#define RTCFG_CHANB        0x00010000L      //Respond to channel B
#define RTCFG_CHANNONE     0x00030000L      //Respond to neither channel A nor B
#define RTCFG_MC01         0x00000000L      //Select SA=00000 or SA=11111 for mode codes (default)
#define RTCFG_MC1          0x01000000L      //Select SA=11111 for mode codes
#define RTCFG_MC0          0x02000000L      //Select SA=00000 for mode codes
#define RTCFG_MCNONE       0x03000000L      //Disable mode codes
#define RTCFG_SYNCALL      0x00000000L      //*Sync on all messages (default)
#define RTCFG_SYNCSEL      0x40000000L      //*Selective sync
#define RTCFG_WIPE         0x00000000L      //Enables message clear (default)
#define RTCFG_NOWIPE       0x80000000L      //Disables message clear
#define RTCFG_WIPE0        0x00000000L      //Initialize data with zeros (default)
#define RTCFG_WIPE123      0x10000000L      //Initialize data with incrementing values
#define RTCFG_WIPECWD      0x20000000L      //Initialize data with command word
#define RTCFG_MODEL        0x00000000L      //RT messages are created in static RAM or dual-port RAM depending upon board model (default)
#define RTCFG_RAM          0x00100000L      //RT messages are created in static RAM
#define RTCFG_DPRAM        0x00200000L      //RT messages are created in dual-port RAM

/**
*
*  Interrupt log list configuration options
*
**/

#define INTCFG_DEFAULT      0x00000000L     //Select all default settings
#define INTCFG_ENABLE       0x00000000L     //Enable interrupt log list (default)
#define INTCFG_DISABLE      0x00000001L     //Disable interrupt log list