documentacion/obtenida/ARINC 429/driver and software/LX708-1/API/L71W32NET.VB

    Public Declare Function L71_XmtNumberRd Lib "L71W32.DLL" Alias "_L71_XmtNumberRd@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Sub L71_XmtNumberWr Lib "L71W32.DLL" Alias "_L71_XmtNumberWr@8" (ByVal brdnum As UInt16, ByVal handleval As UInt32)
    Public Declare Function L71_XmtPeriod Lib "L71W32.DLL" Alias "_L71_XmtPeriod@8" (ByVal frameperiod As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_XmtPeriodEx Lib "L71W32.DLL" Alias "_L71_XmtPeriodEx@16" (ByVal frameperiod As UInt32, ByVal intfreq As UInt16, ByVal framecount As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_XmtPeriodExx Lib "L71W32.DLL" Alias "_L71_XmtPeriodExx@36" (ByVal frameperiod As UInt32, ByVal intfreq As UInt16, ByVal framecount As UInt16, ByVal bcconfigval As UInt32, ByVal bctotal As UInt16, ByVal intconfigval As UInt32, ByVal inttotal As UInt16, ByVal msgconfigval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_XmtSizeRd Lib "L71W32.DLL" Alias "_L71_XmtSizeRd@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Sub L71_XmtSizeWr Lib "L71W32.DLL" Alias "_L71_XmtSizeWr@8" (ByVal mode As UInt16, ByVal handleval As UInt32)

    '/**
    '*
    '*  Transmitter configuration options
    '*
    '**/

    Public Const XMTCFG_DEFAULT As UInt32 = &H0L '//Select all default settings
    Public Const XMTCFG_BUSA As UInt32 = &H0L    '//Message will be transmitted on bus A (default)
    Public Const XMTCFG_BUSB As UInt32 = &H4L    '//Message will be transmitted on bus B
    Public Const XMTCFG_NOSWAP As UInt32 = &H0L  '//Disable bit swapping (default)
    Public Const XMTCFG_SWAP As UInt32 = &H4000L    '//Enable bit swapping
    Public Const XMTCFG_MODEL As UInt32 = &H0L   '//Xmt messages are created depending upon model (default)
    Public Const XMTCFG_RAM As UInt32 = &H100000L '//Xmt messages are created in static RAM
    Public Const XMTCFG_DPRAM As UInt32 = &H200000L   '//Xmt messages are created in dual-port RAM

    '/**
    '*
    '*  Receiver configuration options
    '*
    '**/

    Public Const RCVCFG_DEFAULT As UInt32 = &H0L '//Select all default settings
    Public Const RCVCFG_BUSA As UInt32 = &H0L    '//Respond to channel A (default)
    Public Const RCVCFG_BUSB As UInt32 = &H10000L    '//Respond to channel B
    Public Const RCVCFG_NOSWAP As UInt32 = &H0L  '//Disable bit swapping (default)
    Public Const RCVCFG_SWAP As UInt32 = &H8000L    '//Enable bit swapping
    Public Const RCVCFG_WORDSYNC As UInt32 = &H0L    '//Sync on words (default)
    Public Const RCVCFG_BITSYNC As UInt32 = &H80000L '//Sync on each bit
    Public Const RCVCFG_MODEL As UInt32 = &H0L   '//Xmt messages are created depending upon model (default)
    Public Const RCVCFG_RAM As UInt32 = &H100000L '//Xmt messages are created in static RAM
    Public Const RCVCFG_DPRAM As UInt32 = &H200000L   '//Xmt messages are created in dual-port RAM

    '/**
    '*
    '*  Bus controller configuration options
    '*
    '**/

    Public Const BCCFG_DEFAULT As UInt32 = &H0L  '//Select all default settings
    Public Const BCCFG_ENABLE As UInt32 = &H0L   '//Enable bus controller (default)
    Public Const BCCFG_DISABLE As UInt32 = &H1L  '//Disable bus controller
    Public Const BCCFG_TRIGNONE As UInt32 = &H0L '//No trigger (default)
    Public Const BCCFG_TRIGEXT As UInt32 = &H10L  '//Trigger external
    Public Const BCCFG_TRIGSTART As UInt32 = &H20L    '//Trigger external start
    Public Const BCCFG_NOINTHALT As UInt32 = &H0L    '//Do not generate interrupt on halt (default)
    Public Const BCCFG_INTHALT As UInt32 = &H100L  '//Generate interrupt on halt
    Public Const BCCFG_NOINTPAUSE As UInt32 = &H0L   '//Do not generate interrupt on pause (default)
    Public Const BCCFG_INTPAUSE As UInt32 = &H200L '//Generate interrupt on pause
    Public Const BCCFG_NOLOOPMAX As UInt32 = &H0L    '//Disable maximum loop count (default)
    Public Const BCCFG_LOOPMAX As UInt32 = &H1000L  '//Enable maximum loop count
    Public Const BCCFG_NOSTEP As UInt32 = &H0L   '//Disable single stepping (default)
    Public Const BCCFG_STEP As UInt32 = &H2000L '//Enable single stepping
    Public Const BCCFG_NOSWAP As UInt32 = &H0L   '//Disable bit swapping (default)
    Public Const BCCFG_SWAP As UInt32 = &H4000L '//Enable bit swapping
    Public Const BCCFG_MC01 As UInt32 = &H0L '//Select SA=00000 or SA=11111 for mode codes (default)
    Public Const BCCFG_MC1 As UInt32 = &H1000000L  '//Select SA=11111 for mode codes
    Public Const BCCFG_MC0 As UInt32 = &H2000000L  '//Select SA=00000 for mode codes
    Public Const BCCFG_MCNONE As UInt32 = &H3000000L   '//Disable mode codes
    Public Const BCCFG_SYNCALL As UInt32 = &H0L  '//Sync on all messages (default)
    Public Const BCCFG_SYNCSEL As UInt32 = &H40000000L  '//Selective sync
    Public Const BCCFG_MODEL As UInt32 = &H0L    '//BC messages are created in dual-port RAM (default)
    Public Const BCCFG_RAM As UInt32 = &H100000L  '//BC messages are created in static RAM
    Public Const BCCFG_DPRAM As UInt32 = &H200000L    '//BC messages are created in dual-port RAM

    '/**
    '*
    '*  Monitor configuration options
    '*
    '**/

    Public Const MONCFG_DEFAULT As UInt32 = &H0L '//Select all default settings
    Public Const MONCFG_FILLHALT As UInt32 = &H0L    '//Enable monitor in fill and halt mode (default)
    Public Const MONCFG_DISABLE As UInt32 = &H1L '//Disable monitor
    Public Const MONCFG_CONTINUOUS As UInt32 = &H2L  '//Enable monitor in continuous mode
    Public Const MONCFG_DMA As UInt32 = &H4L '//Enable monitor in dma mode
    Public Const MONCFG_FREE As UInt32 = &H8L    '//Enable monitor in free mode
    Public Const MONCFG_FAST As UInt32 = &H10L    '//Enable monitor in fast mode
    Public Const MONCFG_DELTA As UInt32 = &H20L   '//Enable monitor in delta mode
    Public Const MONCFG_NOINTFULL As UInt32 = &H0L   '//Do not generate interrupt when monitor full (default)
    Public Const MONCFG_INTFULL As UInt32 = &H1000L '//Generate interrupt when monitor full
    Public Const MONCFG_COMPLETE As UInt32 = &H0L    '//Enable receiving complete words (default)
    Public Const MONCFG_INCOMPLETE As UInt32 = &H2000L  '//Enable receiving incomplete words
    Public Const MONCFG_MC01 As UInt32 = &H0L    '//Select SA=00000 or SA=11111 for mode codes (default)
    Public Const MONCFG_MC1 As UInt32 = &H100000L '//Select SA=11111 for mode codes
    Public Const MONCFG_MC0 As UInt32 = &H200000L '//Select SA=00000 for mode codes
    Public Const MONCFG_MCNONE As UInt32 = &H300000L  '//Disable mode codes
    Public Const MONCFG_16K As UInt32 = &H0L '//Allocate a 16K monitor buffer (default)
    Public Const MONCFG_ALLAVAIL As UInt32 = &H1000000L    '//Allocate all available memory to monitor buffer
    Public Const MONCFG_32K As UInt32 = &H2000000L '//Allocate a 32K monitor buffer
    Public Const MONCFG_64K As UInt32 = &H4000000L '//Allocate a 64K monitor buffer
    Public Const MONCFG_128K As UInt32 = &H8000000L    '//Allocate a 128K monitor buffer
    Public Const MONCFG_DPRAM As UInt32 = &H10000000L   '//Allocate all available dual-port memory

    '/**
    '*
    '*  Remote terminal configuration options
    '*
    '**/

    Public Const RTCFG_DEFAULT As UInt32 = &H0L  '//Select all default settings
    Public Const RTCFG_SIMULATE As UInt32 = &H0L '//Enable RT simulation (default)
    Public Const RTCFG_DISABLE As UInt32 = &H1L  '//Disable RT
    Public Const RTCFG_MONITOR As UInt32 = &H2L  '//Enable RT monitor
    Public Const RTCFG_NOBCAST As UInt32 = &H0L  '//Disable broadcast (default)
    Public Const RTCFG_BCAST As UInt32 = &H100L    '//Enable broadcast
    Public Const RTCFG_NOAUTOBUSY As UInt32 = &H0L   '//Disable auto busy (default)
    Public Const RTCFG_AUTOBUSY As UInt32 = &H200L '//Enable auto busy
    Public Const RTCFG_BUILD As UInt32 = &H0L    '//Enable auto building (default)
    Public Const RTCFG_NOBUILD As UInt32 = &H400L  '//Disable auto building
    Public Const RTCFG_STDB As UInt32 = &H0L '//Use MIL-STD-1553B standard (default)
    Public Const RTCFG_STDA As UInt32 = &H800L '//Use MIL-STD-1553A standard
    Public Const RTCFG_NODYNBC As UInt32 = &H0L  '//Do not respond to dynamic BC mode code (default)
    Public Const RTCFG_DYNBC As UInt32 = &H1000L    '//Respond to dynamic BC mode code
    Public Const RTCFG_NOIMMCLR As UInt32 = &H0L '//Do not clear status word bits (default)
    Public Const RTCFG_IMMCLR As UInt32 = &H2000L   '//Status word bits are cleared immediately
    Public Const RTCFG_NOBCASTADDR As UInt32 = &H0L  '//Disable broadcast handling for address (default)
    Public Const RTCFG_BCASTADDR As UInt32 = &H4000L    '//Enable broadcast handling for address
    Public Const RTCFG_NOSWAP As UInt32 = &H0L   '//Disable bit swapping (default)
    Public Const RTCFG_SWAP As UInt32 = &H8000L '//Enable bit swapping
    Public Const RTCFG_WORDSYNC As UInt32 = &H0L '//Sync on words (default)
    Public Const RTCFG_BITSYNC As UInt32 = &H80000L  '//Sync on each bit
    Public Const RTCFG_CHANAB As UInt32 = &H0L   '//Respond to both channels (default)
    Public Const RTCFG_CHANA As UInt32 = &H20000L    '//Respond to channel A
    Public Const RTCFG_CHANB As UInt32 = &H10000L    '//Respond to channel B
    Public Const RTCFG_CHANNONE As UInt32 = &H30000L '//Respond to neither channel A nor B
    Public Const RTCFG_MC01 As UInt32 = &H0L '//Select SA=00000 or SA=11111 for mode codes (default)
    Public Const RTCFG_MC1 As UInt32 = &H1000000L  '//Select SA=11111 for mode codes
    Public Const RTCFG_MC0 As UInt32 = &H2000000L  '//Select SA=00000 for mode codes
    Public Const RTCFG_MCNONE As UInt32 = &H3000000L   '//Disable mode codes
    Public Const RTCFG_SYNCALL As UInt32 = &H0L  '//Sync on all messages (default)
    Public Const RTCFG_SYNCSEL As UInt32 = &H40000000L  '//Selective sync
    Public Const RTCFG_WIPE As UInt32 = &H0L '//Enables message clear (default)
    Public Const RTCFG_NOWIPE As UInt32 = &H80000000L   '//Disables message clear
    Public Const RTCFG_WIPE0 As UInt32 = &H0L    '//Initialize data with zeros (default)
    Public Const RTCFG_WIPE123 As UInt32 = &H10000000L  '//Initialize data with incrementing values
    Public Const RTCFG_WIPECWD As UInt32 = &H20000000L  '//Initialize data with command word
    Public Const RTCFG_MODEL As UInt32 = &H0L    '//RT messages are created in static RAM or dual-port RAM depending upon board model (default)
    Public Const RTCFG_RAM As UInt32 = &H100000L  '//RT messages are created in static RAM
    Public Const RTCFG_DPRAM As UInt32 = &H200000L    '//RT messages are created in dual-port RAM

    '/**
    '*
    '*  Interrupt log list configuration options
    '*
    '**/

    Public Const INTCFG_DEFAULT As UInt32 = &H0L '//Select all default settings
    Public Const INTCFG_ENABLE As UInt32 = &H0L  '//Enable interrupt log list (default)
    Public Const INTCFG_DISABLE As UInt32 = &H1L '//Disable interrupt log list

    '/**
    '*
    '*  Info types
    '*
    '**/
